  EntityEditModel.getEntityNewObserver() added
  DefaultEntityEditModel.isEntityNew() is no longer final
  EntityEditPanel, update and delete actions enabled states now depend on the entityNewObserver provided by the underlying edit model
  EntityPanel, bug fixed, navigation was broken when it came to detail panels, always selected first available panel
  EntityPanel, navigation and panel state constants changed to enums
  EntityEditPanel, confirm type constants changed to enum
  EntityApplicationPanel, now saves preferences for support panels on dialog close
  EntityEditModel.UpdateEvent now contains the updated entities mapped to their respective original primary keys
  DefaultEntityTableModel, uses the above information to refresh the relevant rows after an update has been performed
  EntityPanel.setActiveDetailPanel() bug fixed, introduced in the navigation bug fix above, selecting a detail panel by tab did not work anymore
  DefaultEntityEditModel.delete() bug fixed, now uses getEntity().getOriginalCopy() so that any non-persistent changes to the primary key do not interfere with the delete
  ServerMonitor, connection history tab added
  ServerMonitor, the above improved a bit
  FilteredTablePanel.SortableHeaderRenderer bug fixed, now aligns the text correctly when sorting icon is visible
  ServerMonitor, ClientInstanceMonitorPanel, log JTextArea no longer editable
  EntityUtil.hashByPropertyValue() map key generified
0.9.2 [incompatible api: EntityCritiera, EntityDefinition]
  EntityCriteria, added support for limit/offset
  EntityDefinition, added having clause
  ClientUserMonitor now logs errors occurring during the refresh of user history
  build.xml, bug fixed, jminor-server-monitor.jar target did not include EntityConnectionServerAdminImpl_Stub.class
  build.xml, removed redundant domain package from jminor-server-monitor.jar
  build.xml, minor changes to deploy_server_monitor and deploy_generator targets
  ClientUserMonitor refactoring